Pygments changelog
==================

Pull request numbers before 2.4.2 are not linked as they refer to the now defunct Bitbucket project.

Version 2.19.0
--------------
(unreleased)

- Updated lexers:

  * C#: Fix number highlighting (#986, #2727), add ``file`` keyword (#2726)
  * Elip: Improve punctuation handling (#2651)
  * TransactSQL: Fix single-line comments (#2717)
  * Vyper: Add ``staticcall`` and ``extcall`` (#2719)

* Mark file extensions for ``HTML/XML+Evoque`` as aliases (#2743)

Version 2.18.0
--------------
(released May 4th, 2024)

- New lexers:

  * Janet (#2557)
  * Lean 4 (#2618, #2626)
  * Luau (#2605)
  * Mojo (#2691, #2515)
  * org-mode (#2628, #2636)
  * Promela (#2620)
  * Soong / ``Android.bp`` (#2659)
  * Tact (#2571)
  * Typst (#2596)

- Updated lexers:

  * Awk: recognize ternary operator (#2687)
  * Bash: add ``openrc`` alias (#2599, #2371)
  * Coq: add keywords, lex more vernacular command arguments, produce
    fewer tokens on heading comments (#2678)
  * DNS zone files: Fix comment parsing (#2595)
  * Hy: Support unicode literals (#1126)
  * Inform6: Update to Inform 6.42 (#2644)
  * lean: Fix name handling (#2614)
  * Logtalk: add ``uninstantiation`` keyword and recognize
    escape sequences (#2619)
  * Macaulay2: Update to 1.23 (#2655)
  * Python: fix highlighting of soft keywords before ``None``/``True``/``False``
  * reStructuredText: use ``Token.Comment`` for comments instead of
    ``Comment.Preproc`` (#2598)
  * Rust: highlight ``:``, ``::`` and ``->`` as ``Punctuation``
    and whitespace as ``Whitespace``, instead of ``Text``
    in both cases (#2631)
  * Spice: Add keywords (#2621)
  * SQL Explain: allow negative numbers (#2610)
  * Swift: Support multiline strings (#2681)
  * ThingsDB: add constants and new functions; support template
    strings (#2624)
  * UL4: support nested ``<?doc?>`` and ``<?note?>`` tags (#2597)
  * VHDL: support multi-line comments of VHDL-2008 (#2622)