@@ -10,7 +10,9 @@ Version 2.19.0
 - Updated lexers:
 
   * C#: Fix number highlighting (#986, #2727), add ``file`` keyword (#2726)
+  * Debian control: Add ``Change-By`` field (#2757)
   * Elip: Improve punctuation handling (#2651)
+  * S-Lexer: Fix keywords (#2082, #2750)
   * TransactSQL: Fix single-line comments (#2717)
   * Vyper: Add ``staticcall`` and ``extcall`` (#2719)
 
